# crypto_analysis_unav

./: .gitignore  README.md  pyproject.toml  requirements.txt
mocks/: pairs.json
project_crypto_reader/: CotizacionCripto.py  KrakenAPIConnector.py  __init__.py  app.py
project_crypto_reader/assets/: custom.css
tests/: .gitignore  test_project_crypto_reader.py
tests/test_get_pairs/: test_get_pairs.py
tests/test_obtener_cotizaciones/: __init__.py  test_obtener_cotizaciones.py
