[tool.poetry]
name = "project-crypto-reader"
version = "1.0.0"
description = ""
authors = ["Lucas Eichhorn <leichhorn@alumni.unav.es>"]

[tool.poetry.dependencies]
python = "3.9"
streamlit = "1.2.0"
krakenex = "2.1.0"
pykrakenapi = "0.2.2"
pandas = "1.2.3"
plotly = "5.3.1"
ta = "0.8.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
